--- a/NetworkInterfaceConfigurator/Resources/Texts.xaml
+++ b/NetworkInterfaceConfigurator/Resources/Texts.xaml
@@ -6,14 +6,14 @@
         <Setter Property="Foreground" Value="{StaticResource BrushWhite}"/>
         <Setter Property="FontSize" Value="{StaticResource Regular}"/>
         <Setter Property="FontFamily" Value="{StaticResource StandartText}"/>
-        <Setter Property="Margin" Value="0, 0, 0, 4"/>
+        <Setter Property="Margin" Value="0, 0, 0, 2"/>
     </Style>
 
     <Style x:Key="GridContentValues" TargetType="TextBlock">
         <Setter Property="Foreground" Value="{StaticResource BrushMediumGrey}"/>
         <Setter Property="FontSize" Value="{StaticResource Big}"/>
         <Setter Property="FontFamily" Value="{StaticResource ValuesText-Light}"/>
-        <Setter Property="Margin" Value="0, 0, 0, 1"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
 
 </ResourceDictionary>
