AdapterSelector and his dropdown menu is stylized. Add custom ScrollBar. Add more colors. Add icon.

--- a/NetworkInterfaceConfigurator/App.xaml
+++ b/NetworkInterfaceConfigurator/App.xaml
@@ -12,6 +12,8 @@
 
                 <ResourceDictionary Source="Resources/Texts.xaml"/>
                 <ResourceDictionary Source="Resources/Buttons.xaml"/>
+                <ResourceDictionary Source="Resources/ScrollBar.xaml"/>
+                <ResourceDictionary Source="Resources/ComboBox.xaml"/>
                 <ResourceDictionary Source="Resources/Window.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
