--- a/NetworkInterfaceConfigurator/Resources/ScrollBar.xaml
+++ b/NetworkInterfaceConfigurator/Resources/ScrollBar.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:NetworkInterfaceConfigurator.Resources">
 
+    <!-- Arrows -->
     <Style x:Key="ScrollBarLineButton" TargetType="{x:Type RepeatButton}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="OverridesDefaultStyle" Value="true" />
@@ -59,7 +60,8 @@
             </Setter.Value>
         </Setter>
     </Style>
-
+    
+    <!-- Line -->
     <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="OverridesDefaultStyle" Value="true" />
@@ -98,6 +100,7 @@
         </Setter>
     </Style>
 
+    <!-- ScrollBar -->
     <ControlTemplate x:Key="VerticalScrollBar" TargetType="{x:Type ScrollBar}">
         <Grid>
             <Grid.RowDefinitions>
